[package]
name = "ip-bypass-plus-frag-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core logic for IP Bypass Plus Frag: flow tracking, bypass methods, IP scanner, proxy."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
webpki-roots.workspace = true
ipnet.workspace = true
