[package]
name = "ip-bypass-plus-frag"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "IP Bypass Plus Frag: IPv4 relay with real-SNI-preserving DPI bypass."
default-run = "ip-bypass-plus-frag"

[[bin]]
name = "ip-bypass-plus-frag"
path = "src/main.rs"

[features]
default = ["packet-interception"]
packet-interception = ["ip-bypass-plus-frag-platform/packet-interception"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros", "io-util", "sync", "time", "signal"] }
clap.workspace = true
ratatui.workspace = true
crossterm.workspace = true

rustls.workspace = true
ipnet.workspace = true

ip-bypass-plus-frag-core = { path = "../ip-bypass-plus-frag-core" }
ip-bypass-plus-frag-platform = { path = "../ip-bypass-plus-frag-platform", default-features = false }
