[package]
name = "zerodpi-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Platform packet-interception backends for IP Bypass Plus (WinDivert on Windows, NFQUEUE on Linux/Android)."

[features]
default = ["packet-interception"]
packet-interception = ["dep:nfq"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
zerodpi-core = { path = "../zerodpi-core" }
etherparse.workspace = true
parking_lot.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
nfq = { version = "0.2", optional = true }

[target.'cfg(windows)'.dependencies]
windivert = "0.6"
windivert-sys = "0.10"
